app/assets/stylesheets/save_badge_modal.scss
#save-badge-modal {
  width: 50%;
  height: 60%;
  border-radius: 10px;
  background-color: white;
  opacity: 0;
  position: fixed;
  padding: 3rem;
  top: 100%;
  left: 25%;
  transition: top 0.5s cubic-bezier(0,.97,.11,1.2),
  opacity 0.4s ease-out;

  &.active {
    top: 15%;
    opacity: 100%;
  }

  form {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 2rem;
    height: 100%;
    padding: 3rem 5rem;

    .badge-wrap {
      align-self: center;

      .badge {
        height: 175px;
        width: 175px;
      }
    }

    .headline {
      align-self: center;
      display: flex;
      flex-direction: column;
      align-items: center;
      padding: 0 5rem;

      h2 {
        font-size: 225%;
        margin: 0;
        margin-bottom: 0.5rem;
      }
      p {
        margin: 0;
        font-size: 130%;
        text-align: center;
      }
    }

    .inputs {
      width: 100%;

      label {
        font-size: 80%;
        color: #555;
      }

      input[type="text"] {
        display: block;
        width: 100%;
        font-size: 120%;
        padding: 0.3em;
        margin-top: 0.2rem;
        margin-bottom: 0.7rem;

        &::placeholder {
          color: #ccc;
          font-style: italic;
        }
      }
    }

    .controls {
      width: 100%;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: baseline;
    }
  }
}

